<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.smartitventures.quickdelivery.LoginActivity">


    <ImageView
        android:id="@+id/imageTop"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:src="@drawable/logo"
        android:contentDescription="TODO" />



    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imageTop"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center">


        <EditText
            android:id="@+id/edUserName"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"
            android:textColorHint="@color/signupbtncolor"
            android:drawablePadding="10dp"
            android:textSize="15sp"
            android:textColor="@color/signupbtncolor"
            android:background="@drawable/square_edittext" />


        <EditText
            android:id="@+id/edPassword"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="15sp"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:drawablePadding="10dp"
            android:textColorHint="@color/signupbtncolor"
            android:textColor="@color/signupbtncolor"
            android:background="@drawable/square_edittext" />


        <CheckBox
            android:layout_weight="1"
            android:id="@+id/checkboxRememberme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Remember me"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:checked="false"
            android:button="@drawable/cb_selector"
            android:paddingLeft="4dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegisternow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registernow"
                android:padding="5dp"
                android:textColor="@color/white"/>


            <View
                android:layout_width="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@color/white"
                />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/forgotnow"
                android:textColor="@color/white"/>



        </LinearLayout>



        <Button
            android:id="@+id/btnSignIn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/button_gradient"/>

    </LinearLayout>






</RelativeLayout>
