<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.smartitventures.quickdelivery.LoginActivity">



    <ImageView
        android:id="@+id/imageTop"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_above="@+id/botomlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/imageTop"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:gravity="center"
        >






        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="10dp"
            android:textSize="15sp"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/signupbtncolor"
            android:background="@drawable/square_edittext" />



        <Button
            android:id="@+id/btnSignUp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/button_gradient"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/botomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/alreadyaccount"
            />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textSize="15sp"
            android:textColor="@color/green"
            />

    </LinearLayout>


</RelativeLayout>